--- a/templates/index.html
+++ b/templates/index.html
@@ -10,12 +10,21 @@
                     <div class="cover-text">
                         <h2>Book a table at our place:</h2>
                     </div>
-                    <form id="red" action="home" method="post">
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                        <input type="submit" value="Book a table">
-                    </form>
-                
+                    {% if submitted %}
+                        <h3>Thank you for Your booking!</h3>
+
+                    {% else %}
+                    
+                        <form id="red booking_form" method=POST action="" novadlidate>
+                            {% csrf_token %}
+
+                            {{ form.as_p }}
+                            
+                            <div class="submit-row">
+                                <input type="submit" value="Book a table" class="btn btn-secondary default" name="_save">
+                            </div>
+                        </form>
+                    {% endif %}
                 </div>
             </div>    
         </div>        
