--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light dark-bg">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="{% url 'home' %}">Welcome to eat Good Food!</a>
+            <a class="navbar-brand text-white" href="{% url 'home' %}">Welcome to Good Food!</a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,7 +40,10 @@
                         <a class="nav-link active text-white" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Our menu</a>
+                        <a class="nav-link text-white" href="{% url 'bookings' %}">Book a table</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="{% url 'menu' %}">Our menu</a>
                     </li>
                 </ul>
                 <span class="navbar-text text-muted">
@@ -58,9 +61,9 @@
 
     <!-- Footer -->
     <footer class="footer mt-auto py-3 dark-bg">
-        <p class="m-0 text-center text-white">Made by Good Food </p>
-        <p class="m-0 text-center text-white">Follow us: <i class="fab fa-instagram-square ms-3"></i></p>
-        <p class="m-0 text-center text-white">Rate us:<i class="fa-solid fa-utensils ms-3"></i></p>
+        <p class="m-0 text-center text-white">Made by Good Food Kitchen</p>
+        <p class="m-0 text-center text-white">Follow us: <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square ms-3 text-white"></i></a></p>
+        <p class="m-0 text-center text-white">Rate us: <a href="https://www.tripadvisor.se/" target="_blank"><i class="fa-solid fa-utensils ms-3 text-white"></i></a></p>
     </footer>
 
     <!--font awesome scripts-->
