--- a/templates/bookings.html
+++ b/templates/bookings.html
@@ -6,10 +6,10 @@
     <div class="row">
         <div class="card-body">
             <div class="cover-text">
-                <h2>Book a table at our place:</h2>
+                <h2>Book a table at our place!</h2>
                 <br/>
                     {% if submitted %}
-                        Thank you for Your reservation!
+                        Thank you for Your reservation! Have a look at <a href="{% url 'menu' %}">Our menu!</a>
                     {% else %}
                 <form id="red booking_form" action="" method=POST>
                     {% csrf_token %}
@@ -19,7 +19,7 @@
                     <input type="submit" value="Book a table" class="btn btn-secondary default" name="_save">
 
                 </form>
-                {% endif %}
+                    {% endif %}
             </div>
         </div>
     </div>
