--- a/templates/menu.html
+++ b/templates/menu.html
@@ -6,13 +6,16 @@
     <div class="row">
 
         <!-- Menu Column -->
-        <div class="col-12 mt-3 left">
-            <div class="row">
-                <h1>Menu</h1>
+        <div class="col-md-4">
+            <div class="card mb-4">
+                <div class="card-body">
+                    <div class="cover-text">
+                        <h1>Menu</h1>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-
 </div>
 
 {% endblock %}
